sidebar y-overflow fix

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -92,12 +92,12 @@ ul.list {
 
 #sidebar-wrapper {
 	position: fixed;
+	overflow-x: hidden;
 	left: 250px;
 	width: 50px;
 	height: 100%;
 	margin-left: -250px;
 	margin-right: 5em;
-	overflow-y: auto;
 	background: #314F4F;
 	transition: all 0.5s ease;
 	background-image: url("/img/marvin.png");
